--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,20 @@
 NODE_ENV=development
-SUPABASE_HOST=xyz.supabase.co
-SUPABASE_PORT=5432
-SUPABASE_USER=postgres
-SUPABASE_PASSWORD=123456
-SUPABASE_DB=my_dev_db
+
+SUPABASE_HOST=aws-1-eu-central-1.pooler.supabase.com
+SUPABASE_PORT=6543
+SUPABASE_USER=postgres.zjkjndxfgmpoxiwrvhda
+SUPABASE_PASSWORD=task-management
+SUPABASE_DB=postgres
+
+JWT_SECRET=devsecret
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=485
+SMTP_SECURE=1
+SMTP_FROM="ismayiloff522@gmail.com"
+SMTP_USER="ismayiloff522@gmail.com"
+SMTP_PASSWORD="huindzcicaksrjeb"
+
+CLOUDINARY_CLOUD_NAME=dnzz6qjvp
+CLOUDINARY_API_KEY=742323359581725
+CLOUDINARY_API_TOKEN=D_Fl_U2i5Wf9Km7dzGa1OjNyih0
