--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,20 @@
 NODE_ENV=production
+
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=secret
 MYSQL_DB=my_prod_db
+
+JWT_SECRET=prodsecret
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=485
+SMTP_SECURE=1
+SMTP_FROM="ismayiloff522@gmail.com"
+SMTP_USER="ismayiloff522@gmail.com"
+SMTP_PASSWORD="huindzcicaksrjeb"
+
+CLOUDINARY_CLOUD_NAME=dnzz6qjvp
+CLOUDINARY_API_KEY=742323359581725
+CLOUDINARY_API_TOKEN=D_Fl_U2i5Wf9Km7dzGa1OjNyih0
