--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nest-winston": "^1.10.2",
     "nestjs-cls": "^5.4.2",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "winston": "^3.18.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
