--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.1.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "nest-winston": "^1.10.2",
