--- a/.env.development
+++ b/.env.development
@@ -9,11 +9,11 @@ SUPABASE_DB=postgres
 JWT_SECRET=devsecret
 
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=485
+SMTP_PORT=465
 SMTP_SECURE=1
-SMTP_FROM="ismayiloff522@gmail.com"
-SMTP_USER="ismayiloff522@gmail.com"
-SMTP_PASSWORD="huindzcicaksrjeb"
+SMTP_FROM=ismayiloff522@gmail.com
+SMTP_USER=ismayiloff522@gmail.com
+SMTP_PASSWORD=huindzcicaksrjeb
 
 CLOUDINARY_CLOUD_NAME=dnzz6qjvp
 CLOUDINARY_API_KEY=742323359581725
