--- a/.env.development
+++ b/.env.development
@@ -18,3 +18,7 @@ SMTP_PASSWORD=huindzcicaksrjeb
 CLOUDINARY_CLOUD_NAME=dnzz6qjvp
 CLOUDINARY_API_KEY=742323359581725
 CLOUDINARY_API_TOKEN=D_Fl_U2i5Wf9Km7dzGa1OjNyih0
+
+
+ADMIN_EMAIL=ramazanismayilovh@gmail.com
+ADMIN_PASSWORD=admin123
