--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "nest-winston": "^1.10.2",
     "nestjs-cls": "^5.4.2",
     "pg": "^8.14.1",
